- fix test which fails in IDE - add binary serialization to doc - remove --add-opens from pom.xml